K8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-container
        image: mohamedtarek5/myflaskapp:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"      
        ports:
        - containerPort: 5002
        livenessProbe:
          httpGet:
            path: /
            port: 5002
          initialDelaySeconds: 10
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 5002
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
        - name: regcred
